bug fix Fixed a bug where a rotated cell wan't clickable in chrome by wrapping it in an additional div

--- a/src/components/Grid/styles.scss
+++ b/src/components/Grid/styles.scss
@@ -22,13 +22,20 @@
 }
 
 .cell{
+    width: 100%;
+    height: 100%;
+}
+
+.cell-inner{
+    width: 100%;
+    height: 100%;
     background-color: variables.$color-primmary;
     transform-style: preserve-3d;
-    transition: 400ms;
-    transform: transform variables.$animation_speed;
+    transition: transform variables.$animation_speed;
     cursor: pointer;
     backface-visibility: hidden;
 }
+
 
 
 .front{
@@ -46,18 +53,19 @@
     height: 100%;
     width: 100%;
     position: absolute;
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) translateZ(100px);
     background-color: variables.$color-primmary;
     backface-visibility: hidden;
     background-color: red;
 }
+
 
 .prevent-click , [data-guessed=true], [data-flipped=false]{
     pointer-events: none;
 }
 
 [data-flipped=true]{
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) ;
 }
 
 [data-guessed=true] .back {
